--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -3,6 +3,7 @@
 {% block main %}
     Seja Bem vindo {{ usuario.funcionario.nome }} 
     <a href="{% url 'list_funcionarios' %}">Gerenciar Funcionarios</a>
+    <a href="{% url 'list_departamentos' %}">Gerenciar Departamentos</a>
     <a href="{% url 'logout' %}">Logout</a>
     <div class="col-sm">
         {% if usuario.funcionario.empresa %}
