--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -12,6 +12,15 @@
 
         <button type="submit" class="btn btn-info">Salvar</button>
     </form>
+    <br>
+    <a href="{% url 'create_documentos' object.id %}" class="btn btn-success" >
+        Adicionar documento
+    </a>
+    <br>
+    {% for documento in object.documento_set.all %}
+    <br>
+        <a href=" {{  documento.arquivo.url  }}"> {{documento}}</a>
+    {% endfor %}
 
 
 {% endblock %}  
